# pySVS

./: .gitignore  default.nix  pyproject.toml  requirements.txt
src/pySVS/: __init__.py  __main__.py  pySVS.py
